<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintGuide_percent="0.5"
    tools:context=".ui.dashboard.DashboardFragment">

    <TextView
        android:id="@+id/food_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/barcode_label"
        android:textAlignment="viewEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.35"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/barcode_label"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/food_name_text" />
    <TextView
        android:id="@+id/barcode_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.6"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@id/barcode_label"
        app:layout_constraintTop_toBottomOf="@id/food_name_text" />

    <TextView
        android:id="@+id/incredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/incredients"
        android:textSize="40sp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@+id/barcode_label"
        />

    <TextView
        android:id="@+id/calories_label"
        android:textAlignment="viewEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.35"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/calories_label"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/incredients"
        />
    <TextView
        android:id="@+id/calories_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.6"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@id/barcode_label"
        app:layout_constraintTop_toBottomOf="@id/incredients" />
    <TextView
        android:id="@+id/carbs_label"
        android:textAlignment="viewEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.35"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/carbs_label"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calories_label"
        />
    <TextView
        android:id="@+id/carbs_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.6"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@id/barcode_label"
        app:layout_constraintTop_toBottomOf="@id/calories_label" />
    <TextView
        android:id="@+id/fat_label"
        android:textAlignment="viewEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.35"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/fat_label"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carbs_label"
        />
    <TextView
        android:id="@+id/fat_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.6"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@id/barcode_label"
        app:layout_constraintTop_toBottomOf="@id/carbs_label" />
    <TextView
        android:id="@+id/protein_label"
        android:textAlignment="viewEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.35"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/protein_label"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fat_label"
        />
    <TextView
        android:id="@+id/protein_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.6"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@id/barcode_label"
        app:layout_constraintTop_toBottomOf="@id/fat_label" />

</androidx.constraintlayout.widget.ConstraintLayout>